--- a/app/src/main/res/layout/content_onboarding_unified_browsing_protection.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_browsing_protection.xml
@@ -20,7 +20,7 @@
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/privateSearchGroup"
+        android:id="@+id/browserProtectionGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/OnboardingListItem"
@@ -31,18 +31,18 @@
         tools:background="#67F">
 
         <TextView
-            android:id="@+id/privateSearchTitle"
-            android:text="@string/unifiedOnboardingPrivateSearchTitle"
+            android:id="@+id/browserProtectionTitle"
+            android:text="@string/unifiedOnboardingBrowsingProtectionTitle"
             style="@style/OnboardingListItemTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/privateSearchSubtitle"
-            android:text="@string/unifiedOnboardingPrivateSearchSubtitle"
+            android:id="@+id/browserProtectionSubtitle"
+            android:text="@string/unifiedOnboardingBrowsingProtectionEnabledSubtitle"
             style="@style/OnboardingListItemSubtitle"
-            app:layout_constraintStart_toStartOf="@id/privateSearchTitle"
-            app:layout_constraintTop_toBottomOf="@id/privateSearchTitle" />
+            app:layout_constraintStart_toStartOf="@id/browserProtectionTitle"
+            app:layout_constraintTop_toBottomOf="@id/browserProtectionTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
