--- a/app/src/main/res/layout/content_onboarding_unified_data_clearing.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_data_clearing.xml
@@ -25,9 +25,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:background="#B3F"
-        app:layout_constraintEnd_toEndOf="@id/browsingProtectionGroup"
-        app:layout_constraintStart_toStartOf="@id/browsingProtectionGroup"
-        app:layout_constraintTop_toBottomOf="@id/browsingProtectionGroup">
+        app:layout_constraintEnd_toEndOf="@id/privateSearchGroup"
+        app:layout_constraintStart_toStartOf="@id/privateSearchGroup"
+        app:layout_constraintTop_toBottomOf="@id/privateSearchGroup">
 
         <TextView
             android:id="@+id/dataClearingTitle"
