--- a/app/src/main/res/layout/content_onboarding_tracker_blocking_opt_in.xml
+++ b/app/src/main/res/layout/content_onboarding_tracker_blocking_opt_in.xml
@@ -59,6 +59,7 @@
                 style="@style/OnboardingTextSubtitle"
                 android:layout_margin="10dp"
                 android:paddingStart="6dp"
+                android:visibility="gone"
                 android:paddingEnd="6dp"
                 android:text="@string/trackerBlockingOptInSubtitle"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -98,9 +99,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/onboardingTrackerOptInItemTitle"
                     android:textAlignment="center"
-                    android:paddingStart="8dp"
                     android:layout_marginTop="25dp"
-                    android:paddingEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/blockTrackersIcon" />
@@ -112,8 +111,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
                     android:text="@string/onboardingTrackerOptInItemSubtitle"
                     android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
