--- a/app/src/main/res/layout/tracker_blocking_disabled_confirmation_dialog.xml
+++ b/app/src/main/res/layout/tracker_blocking_disabled_confirmation_dialog.xml
@@ -18,9 +18,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="26dp"
+    android:background="@color/white"
     android:paddingTop="28dp"
-    android:background="@color/white">
+    android:paddingBottom="26dp">
 
     <ImageView
         android:id="@+id/trackerBlockingIcon"
@@ -35,24 +35,24 @@
     <TextView
         android:id="@+id/title"
         style="@style/OnboardingConfirmationDialogTitle"
+        android:layout_marginTop="12dp"
         android:text="@string/onboardingOptedOutConfirmationTitle"
         android:textAlignment="center"
-        app:layout_constraintWidth_max="193dp"
-        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/trackerBlockingIcon" />
+        app:layout_constraintTop_toBottomOf="@id/trackerBlockingIcon"
+        app:layout_constraintWidth_max="193dp" />
 
     <TextView
         android:id="@+id/subtitle"
         style="@style/OnboardingListItemSubtitle"
         android:layout_width="0dp"
+        android:layout_marginTop="8dp"
         android:text="@string/onboardingOptedOutConfirmationSubtitle"
         android:textAlignment="center"
-        app:layout_constraintWidth_max="258dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintWidth_max="280dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
