Add text color into style for onboarding subtitle text

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -240,6 +240,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/brownishGrayTwo</item>
         <item name="android:textSize">15sp</item>
     </style>
 
