Add bookmarks as part of autocomplete results

--- a/app/src/main/res/drawable/ic_autocomplete_24dp.xml
+++ b/app/src/main/res/drawable/ic_autocomplete_24dp.xml
@@ -20,9 +20,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path
-        android:pathData="M5.576,13a6.509,6.509 0,0 0,4.156 5.093c-0.65,-1.263 -1.094,-3.06 -1.205,-5.093h-2.95zM5.576,11h2.951c0.111,-2.033 0.556,-3.83 1.205,-5.093A6.509,6.509 0,0 0,5.576 11zM18.424,11a6.509,6.509 0,0 0,-4.156 -5.093c0.65,1.263 1.094,3.06 1.205,5.093h2.95zM18.424,13h-2.951c-0.111,2.033 -0.556,3.83 -1.205,5.093A6.509,6.509 0,0 0,18.424 13zM10.031,13c0.194,3.178 1.274,5.5 1.969,5.5 0.695,0 1.775,-2.322 1.97,-5.5h-3.94zM10.031,11h3.938C13.775,7.822 12.695,5.5 12,5.5c-0.695,0 -1.775,2.322 -1.97,5.5zM12,20a8,8 0,1 1,0 -16,8 8,0 0,1 0,16z"
-        android:fillColor="?attr/toolbarIconColor"
-        android:fillType="nonZero"
-        tools:ignore="VectorRaster" />
+  <path
+      android:pathData="M7.035,16.352c0.58,0 1.035,-0.466 1.035,-1.036V9.53l8.168,8.167a1.03,1.03 0,1 0,1.46 -1.46L9.53,8.07h5.786c0.57,0 1.036,-0.466 1.036,-1.035 0,-0.57 -0.466,-1.035 -1.036,-1.035h-8.28C6.465,6 6,6.466 6,7.035v8.281c0,0.57 0.466,1.036 1.035,1.036z"
+      android:fillColor="?attr/toolbarIconColor"
+      android:fillType="nonZero"
+      tools:ignore="VectorRaster" />
 </vector>
