--- a/app/src/main/res/layout/item_tab_legacy.xml
+++ b/app/src/main/res/layout/item_tab_legacy.xml
@@ -23,6 +23,7 @@
     android:layout_marginTop="5dp"
     android:layout_marginEnd="10dp"
     android:layout_marginBottom="5dp"
+    android:background="@drawable/tab_background"
     android:elevation="2dp">
 
     <ImageView
