--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -45,5 +45,7 @@
     <attr name="feedbackListItemSeparatorColor" format="color" />
     <attr name="feedbackEditTextBackgroundColor" format="color" />
     <attr name="feedbackEditTextHintColor" format="color" />
+    <attr name="tabPlaceholderTintColor" format="color" />
+    <attr name="tabCardBackgroundColor" format="color" />
 
 </resources>
