--- a/app/src/main/res/layout/activity_tab_switcher_legacy.xml
+++ b/app/src/main/res/layout/activity_tab_switcher_legacy.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2018 DuckDuckGo
+  ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,14 +14,14 @@
   ~ limitations under the License.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.duckduckgo.app.tabs.ui.TabSwitcherActivity">
+    tools:context="com.duckduckgo.app.tabs.ui.old.TabSwitcherActivityLegacy">
 
     <include layout="@layout/include_toolbar" />
 
-    <include layout="@layout/content_tab_switcher" />
+    <include layout="@layout/content_tab_switcher_legacy" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
