Fix bug where bs pixel parameter was always set as false. Amend code as per PR.

--- a/app/src/main/res/layout/content_settings_autocomplete.xml
+++ b/app/src/main/res/layout/content_settings_autocomplete.xml
@@ -23,6 +23,9 @@
     <TextView
         android:id="@+id/settingsAutocompleteTitle"
         style="@style/SettingsSectionTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:text="@string/settingsHeadingAutocomplete" />
 
     <androidx.appcompat.widget.SwitchCompat
