--- a/app/src/main/res/layout/content_tab_switcher.xml
+++ b/app/src/main/res/layout/content_tab_switcher.xml
@@ -20,9 +20,10 @@
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:layout_marginStart="7dp"
-    android:layout_marginTop="10dp"
     android:layout_marginEnd="7dp"
     android:layout_marginBottom="5dp"
+    android:clipToPadding="false"
+    android:paddingTop="10dp"
     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
