--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -19,10 +19,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="7dp"
-    android:layout_marginTop="14dp"
+    android:layout_marginTop="6dp"
     android:layout_marginEnd="7dp"
     android:layout_marginBottom="10dp"
-    android:elevation="2dp"
+    app:cardElevation="4dp"
     app:cardBackgroundColor="?attr/colorPrimary"
     app:cardCornerRadius="6dp">
 
