Feature/add bookmarks to autocomplete results (#536)
* Add bookmarks as part of autocomplete results

* Create new factory for autocomplete view holders

* Disable bookmarks toggle if suggestions are switched off

* Move onUserSubmittedQuery inside launch to avoid sync issues with the pixel sent

--- a/app/src/main/res/drawable/ic_autocomplete_24dp.xml
+++ b/app/src/main/res/drawable/ic_autocomplete_24dp.xml
@@ -22,5 +22,5 @@
     <path
         android:fillColor="?attr/toolbarIconColor"
         android:fillType="nonZero"
-        android:pathData="M14.774,16.051a6.702,6.702 0,0 1,-8.716 -10.13,6.7 6.7,0 0,1 10.13,8.716l3.446,3.447a1,1 0,0 1,-1.414 1.414l-3.446,-3.447zM7.33,14.124a4.9,4.9 0,1 0,6.93 -6.93,4.9 4.9,0 0,0 -6.93,6.93z" />
+        android:pathData="M7.035,16.352c0.58,0 1.035,-0.466 1.035,-1.036V9.53l8.168,8.167a1.03,1.03 0,1 0,1.46 -1.46L9.53,8.07h5.786c0.57,0 1.036,-0.466 1.036,-1.035 0,-0.57 -0.466,-1.035 -1.036,-1.035h-8.28C6.465,6 6,6.466 6,7.035v8.281c0,0.57 0.466,1.036 1.035,1.036z" />
 </vector>
