--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -30,7 +30,7 @@
         android:id="@+id/cardContentsContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="3dp">
+        >
 
         <ImageView
             android:id="@+id/favicon"
@@ -42,6 +42,23 @@
             android:src="@drawable/ic_globe_gray_16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:importantForAccessibility="no"
+            android:id="@+id/tabUnread"
+            android:layout_width="9dp"
+            android:layout_height="9dp"
+            android:src="@drawable/tab_unread_indicator"
+            android:elevation="30dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
+            app:layout_constraintCircle="@id/favicon"
+            app:layout_constraintCircleRadius="8dp"
+            app:layout_constraintCircleAngle="135"
+            app:layout_constraintStart_toEndOf="@id/favicon"
+            app:layout_constraintTop_toBottomOf="@id/favicon"
+            app:layout_constraintBottom_toBottomOf="@id/favicon"
+            app:layout_constraintEnd_toEndOf="@id/favicon" />
 
         <ImageView
             android:id="@+id/close"
