Change transition animation duration / distance / fade

--- a/app/src/main/res/anim/slide_from_bottom.xml
+++ b/app/src/main/res/anim/slide_from_bottom.xml
@@ -15,6 +15,6 @@
   -->
 
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_mediumAnimTime"
-    android:fromYDelta="100%"
+    android:duration="300"
+    android:fromYDelta="30%"
     android:toYDelta="0%" />
