--- a/app/src/main/res/anim/slide_to_bottom.xml
+++ b/app/src/main/res/anim/slide_to_bottom.xml
@@ -15,6 +15,6 @@
   -->
 
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_mediumAnimTime"
+    android:duration="300"
     android:fromYDelta="0%"
-    android:toYDelta="100%" />
+    android:toYDelta="30%" />
