--- a/app/src/main/res/values/animation-settings.xml
+++ b/app/src/main/res/values/animation-settings.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,10 +15,7 @@
   ~ limitations under the License.
   -->
 
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
-        android:duration="@integer/slide_animation_duration_ms"
-        android:fromXDelta="0"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:toXDelta="100%p" />
-</set>
+<resources>
+    <integer name="tab_switcher_animation_duration_ms">300</integer>
+    <integer name="slide_animation_duration_ms">300</integer>
+</resources>
